welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:3: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	if ((0<= nums.length && nums.length <= 9) && nums(4)=9) {
                                                  ^